syntax = "proto3";

package chat;

message UserMessageRequest {
  string user_id = 1;
  string message_text = 2;
  optional string chat_id = 3;
}

message AssistantMessageResponse {
  string user_id = 1;
  string chat_id = 2;
  string message_id = 3;
  string message_chunk = 4;
}

message GetChatRequest {
  string user_id = 1;
  string chat_id = 2;
}

enum MessageRole {
  USER = 0;
  ASSISTANT = 1;
}

message ChatMessage {
  string message_id = 1;
  MessageRole role = 2;
  string message_text = 3;
  int64 sent_at = 4;
}

message ChatResult {
  string user_id = 1;
  string chat_id = 2;
  repeated ChatMessage messages = 3;
}

service ChatService {
  rpc SendMessage(UserMessageRequest) returns (stream AssistantMessageResponse);
  rpc GetChat(GetChatRequest) returns (ChatResult);
}