// Original file: proto/chat.proto


export interface AssistantMessageResponse {
  'userId'?: (string);
  'chatId'?: (string);
  'messageId'?: (string);
  'messageChunk'?: (string);
}

export interface AssistantMessageResponse__Output {
  'userId': (string);
  'chatId': (string);
  'messageId': (string);
  'messageChunk': (string);
}
