// Original file: proto/chat.proto


export interface AssistantMessageSuccessResponse {
  'userId'?: (string);
  'chatId'?: (string);
  'messageId'?: (string);
  'messageChunk'?: (string);
}

export interface AssistantMessageSuccessResponse__Output {
  'userId': (string);
  'chatId': (string);
  'messageId': (string);
  'messageChunk': (string);
}
